force-app/main/default/objects/Clinic_Organizer__c/Clinic_Organizer__c.object-meta.xml
<CustomObject>
    <label>Clinic Organizer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clinic Organizers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>