force-app/main/default/objects/Clinic_Organizer__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento com o local físico onde o organizador atua.</description>
    <inlineHelpText>Selecione o endereço deste organizador.</inlineHelpText>
    <label>Address</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Clinic_Organizers</relationshipName>
    <type>Lookup</type>
</CustomField>