force-app/main/default/objects/Clinic_Organizer__c/fields/Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>E-mail secundário para casos de contingência.</description>
    <inlineHelpText>Insira um endereço de e-mail reserva.</inlineHelpText>
    <label>Alternative Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>