force-app/main/default/objects/Clinic_Organizer__c/fields/Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone__c</fullName>
    <description>Número de telefone secundário para contato.</description>
    <inlineHelpText>Insira um número de telefone reserva.</inlineHelpText>
    <label>Alternative Phone</label>
    <type>Phone</type>
</CustomField>