force-app/main/default/objects/Clinic_Organizer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Endereço de e-mail principal para contato oficial.</description>
    <inlineHelpText>Insira o e-mail principal do organizador.</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>