force-app/main/default/objects/Clinic_Organizer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Número de telefone principal com DDD.</description>
    <inlineHelpText>Digite o número de telefone de contato.</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>