force-app/main/default/objects/Clinic_Organizer__c/validationRules/Email_Obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Obrigatorio</fullName>
    <active>true</active>
    <description>Impede salvar o registro sem e-mail.</description>
    <errorConditionFormula>ISBLANK( Email__c )</errorConditionFormula>
    <errorMessage>Informe o e-mail antes de salvar.</errorMessage>
</ValidationRule>